Fix alignment issues on medium resolution

--- a/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
+++ b/deploy/htdocs/version/src/inc/style/component/block-map-tertiary-slide/_abstract_slide.scss
@@ -29,6 +29,10 @@
 	}
 
 	@include respond-to(MEDIUM) {
+		.slide-heading {
+			padding: 0 $sizeGrid;
+		}
+
 		.slide-title {
 			width: $sizeGrid * 5;
 
